[package]
name = "telegram-pin-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
grammers = "0.1.0"
grammers-client = "0.5.0"
grammers-session = "0.5.1"
grammers-tl-types = "0.5.1"
home = "0.5.9"
log = "0.4.21"
reqwest = {version = "0.11.26", features = ["multipart"]}
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
simple_logger = "4.3.3"
tokio = "1.36.0"
toml = "0.8.10"
